# geodude

./: .gitignore  CHANGELOG.md  README.md  TRAJECTORY_FOLLOWING_ISSUE.md  pyproject.toml
docs/: AFFORDANCE_PRIMITIVES_PLAN.md  cartesian-control.md  geodude_pickup.dot  geodude_pickup_bimanual.dot  grasp-aware-collision.md
examples/: arm_planning.py  basic_movement.py  cartesian_demo.py  chat.py  console.py  interactive_viewer.py  named_config_planning.py  recycle.py  recycle_manual.py  recycle_objects.py  recycle_primitives.py  symmetric_grasp_test.py  visualize_tsr.py
scripts/: benchmark_qp_solver.py  diagnose_cartesian_smoothness.py  interactive_viewer.py  profile_recycling_planning.py  record_demo.py  record_gripper_trajectory.py  test_grasp_contacts.py  validate_2f140.py  visualize_collisions.py  visualize_tsr.py
src/geodude/: __init__.py  __main__.py  affordances.py  arm.py  cartesian.py  chat.py  cli.py  collision.py  config.py  console.py  demo_loader.py  execution.py  executor.py  grasp_manager.py  grasp_source.py  gripper.py  parallel.py  planning.py  primitives.py  robot.py  trajectory.py  tsr_utils.py  vention_base.py
src/geodude/bt/: __init__.py  nodes.py  subtrees.py
src/geodude/demos/: recycling.py  tune_ur5e_gains.py
src/geodude/panels/: __init__.py  chat_panel.py  status_hud.py  teleop_panel.py
tasks/: lessons.md  todo.md
tests/: bench_physics_step.py  conftest.py  test_affordances.py  test_arm.py  test_arm_scope.py  test_cartesian.py  test_collision.py  test_demo_loader.py  test_execution.py  test_fork_planning.py  test_grasp_manager.py  test_gripper.py  test_integration.py  test_kinematic_manipulation.py  test_lift_base.py  test_parallel.py  test_placement.py  test_robot.py  test_robotiq_gripper.py  test_tsr_utils.py  test_unified_planning_api.py  test_vention_base.py
tsr_templates/grasps/: can_side_grasp.yaml  can_side_grasp_flipped.yaml
tsr_templates/places/: can_on_table_flipped.yaml  can_on_table_upright.yaml  recycle_bin_drop.yaml
