[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geodude"
version = "0.1.0"
description = "High-level API for programming the Geodude bimanual robot"
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mujoco",
    "pyyaml",
    "scipy",
    "toppra>=0.6.3",
    "mj_environment @ git+https://github.com/personalrobotics/mj_environment.git",
    "geodude-assets",
    "prl-assets",
    "tsr",
    "pycbirrt",
    "eaik",
]

[tool.uv.sources]
geodude-assets = { path = "../geodude_assets", editable = true }
prl-assets = { path = "../prl_assets", editable = true }
tsr = { path = "../tsr", editable = true }
pycbirrt = { path = "../pycbirrt", editable = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geodude"]

[tool.ruff]
lint.select = ["F", "E", "W", "I"]
