[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geodude"
version = "0.1.0"
description = "High-level API for programming the Geodude bimanual robot"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
dependencies = [
    "numpy",
    "mujoco",
    "pyyaml",
    "py_trees>=2.2",
    "ipython>=8.0",
    "mj-manipulator @ git+https://github.com/personalrobotics/mj_manipulator.git",
    "mj-environment @ git+https://github.com/personalrobotics/mj_environment.git",
    "geodude-assets @ git+https://github.com/personalrobotics/geodude_assets.git",
    "prl-assets @ git+https://github.com/personalrobotics/prl_assets.git",
    "tsr @ git+https://github.com/personalrobotics/tsr.git",
    "eaik",
]

[project.scripts]
geodude = "geodude.cli:main"

[tool.uv.sources]
mj-manipulator = { workspace = true }
mj-environment = { workspace = true }
geodude-assets = { workspace = true }
prl-assets = { workspace = true }
tsr = { workspace = true }

[project.optional-dependencies]
chat = [
    "anthropic>=0.40",
]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geodude"]

[project.urls]
Homepage = "https://github.com/personalrobotics/geodude"
Repository = "https://github.com/personalrobotics/geodude"
Issues = "https://github.com/personalrobotics/geodude/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/geodude/__init__.py" = ["F401"]
"src/geodude/**/__init__.py" = ["F401"]
"src/geodude/demos/*.py" = ["F821"]
"src/geodude/chat.py" = ["E501"]
"src/geodude/panels/chat_panel.py" = ["E501"]
